# autotools-template

./: .gitignore  Dockerfile  Doxyfile  GNUMakefile.am  Makefile  README.md  configure.ac
inc/: example.h
src/: app.cc  example.cc
